# AutoTag

./: config.json  main.py  pyproject.toml
documentation/: CHANGELOG.md  LICENSE  README.md  TECHNICAL_SPEC.md  TODO.md  USER_GUIDE.md
models/classification/moods_and_context/approachability/: approachability_3c_classes.json
src/: __init__.py  config.py  config_loader.py  logging_config.py  pipeline.py
src/audio/: file_manager.py  loader.py
src/models/: loader.py
src/output/: result_handler.py  tag_writer.py
src/prediction/: analyzer.py  predictor.py
